--- a/index.html
+++ b/index.html
@@ -78,89 +78,119 @@
       <!-- ********** TICKET PAGE ********** -->
       <section class="ticketPage">
         <h1 class="tickets-header">Help Desk Support</h1>
-        <p class="main-paragraph"><span>W</span>elcome to our help desk support! If you are experiencing issues with your computer please fill out the following form with the following information: the type of computer you have, the model number of your computer, the date you are creating the ticket and a brief description of the issue you are having. We will get back to you promptly!</p>
+        <p class="main-paragraph"><span>W</span>elcome to our help desk support! If you are experiencing issues with</p>
+        <p class="main-paragraph2">your computer please fill out the following form with the following information: the type of computer you have, the model number of
+          your computer, the date you are creating the ticket and a brief description of the issue you are having. We will get back to you promptly!</p>
 
         <br>
         <!-- ********** CREATE TICKET FORM ********** -->
-        <div class="createTicket">
-          <h1 class="create-ticket-header">Create A Ticket</h1>
-          <br>
+        <div class="create_ticket_div">
           <form id="create-ticket">
+            <h1 class="create-ticket-header">Create A Ticket</h1>
+            <br>
             <input placeholder="date" type="text" name="ticket[date]">
             <br>
             <input placeholder="type of pc" type="text" name="ticket[type_of_pc]">
             <br>
             <input placeholder="model number" type="text" name="ticket[model_number]">
             <br>
-            <textarea placeholder="Tell us what issue you are experiencing in this box." rows="4" cols="50" name="ticket[description]">
-              </textarea>
-            <br>
-            <button id="btn-create-ticket" class="btn btn-dark">Submit</button>
-          </form>
-        </div>
-        <br>
-
-        <!-- ********** VIEW ALL TICKETS FORM ********** -->
-        <div class="viewTickets">
-          <h1 class="view-all-tickets-header">View All Tickets</h1>
-          <br>
-          <form id="get-tickets">
-            <button id="btn-get-tickets" class="btn btn-dark">View All Tickets</button>
-          </form>
-        </div>
-
-        <div id="ticket-display"></div>
-
-        <br>
-        <!-- ********** UPDATE TICKET FORM ********** -->
-        <div class="updateTicket">
-          <h1 class="update-a-ticket-header">Update a Ticket</h1>
-          <br>
-          <form id="update-ticket">
-            <input placeholder="date" type="text" name="ticket[date]">
-            <br>
-            <input placeholder="id" type="text" name=ticket[id]>
-            <br>
             <textarea placeholder="Tell us what new issue you are experiencing in this box." rows="4" cols="50" name="ticket[description]">
               </textarea>
-            <br>
-            <button id="btn-update-ticket" class="btn btn-dark">Update Ticket</button>
-          </form>
         </div>
-
         <br>
-        <!-- ********** REMOVE TICKET FORM ********** -->
-        <div class="removeTicket">
-          <h1 class="remove-a-ticket-header">Remove a Ticket</h1>
-          <form id="delete-ticket">
-            <input placeholder="id" type="text" name=ticket[id]>
-            <br>
-            <button id="btn-remove-ticket" class="btn btn-dark">Remove a Ticket</button>
-          </form>
-        </div>
+        <button id="btn-create-ticket" class="btn btn-dark">Submit</button>
+        </form>
+    </div>
+    <br>
 
-        <!-- ********** CHANGE PASSWORD FORM ********** -->
-        <div class="change_password_div">
-        <h2 class="change-password-header">Change Password</h2>
-          <form id="change-password">
-            <div class="form-group">
-              <label for="password"></label>
-              <svg id="icon-lock-op" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" width="32" height="32" fill="none" stroke="currentcolor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2">
-                <path d="M5 15 L5 30 27 30 27 15 Z M9 15 C9 9 9 5 16 5 23 5 23 9 23 15 M16 20 L16 23"/>
-                <circle cx="16" cy="24" r="1"/>
-              </svg>
-              <input id="" class="form-control input-field-op" placeholder="Old Password" type="password" name="passwords[old]">
-              <br>
-              <svg id="icon-lock-np" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" width="32" height="32" fill="none" stroke="currentcolor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2">
-                <path d="M5 15 L5 30 27 30 27 15 Z M9 15 C9 9 9 5 16 5 23 5 23 9 23 15 M16 20 L16 23"/>
-                <circle cx="16" cy="24" r="1"/>
-              </svg>
-              <input id="" class="form-control input-field-np" placeholder="New Password" type="password" name="passwords[new]">
-            </div>
-            <br>
-            <button id="btn-change-password" class="btn btn-dark">Change Password</button>
-          </form>
+    <!-- ********** VIEW ALL TICKETS FORM ********** -->
+    <!-- <div class="viewTickets">
+      <h1 class="view-all-tickets-header">View All Tickets</h1>
+      <br>
+      <form id="get-tickets">
+        <button id="btn-get-tickets" class="btn btn-dark">View All Tickets</button>
+      </form>
+    </div>
+
+    <div id="ticket-display"></div> -->
+
+    <br>
+
+<form id ="get-tickets">
+    <button type="button" id="btn-get-tickets" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalLong">
+  View All Tickets
+</button>
+
+<!-- Modal -->
+<div class="modal fade" id="exampleModalLong" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLongTitle">Here are your tickets</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <!-- <div id="ticket-display"></div> -->
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
+</form>
+
+    <!-- ********** UPDATE TICKET FORM ********** -->
+    <div class="updateTicket">
+      <h1 class="update-a-ticket-header">Update a Ticket</h1>
+      <br>
+      <form id="update-ticket">
+        <input placeholder="date" type="text" name="ticket[date]">
+        <br>
+        <input placeholder="id" type="text" name=ticket[id]>
+        <br>
+        <textarea placeholder="Tell us what new issue you are experiencing in this box." rows="4" cols="50" name="ticket[description]">
+              </textarea>
+        <br>
+        <button id="btn-update-ticket" class="btn btn-dark">Update Ticket</button>
+      </form>
+    </div>
+
+    <br>
+    <!-- ********** REMOVE TICKET FORM ********** -->
+    <div class="removeTicket">
+      <h1 class="remove-a-ticket-header">Remove a Ticket</h1>
+      <form id="delete-ticket">
+        <input placeholder="id" type="text" name=ticket[id]>
+        <br>
+        <button id="btn-remove-ticket" class="btn btn-dark">Remove a Ticket</button>
+      </form>
+    </div>
+
+    <!-- ********** CHANGE PASSWORD FORM ********** -->
+    <div class="change_password_div">
+      <h2 class="change-password-header">Change Password</h2>
+      <form id="change-password">
+        <div class="form-group">
+          <label for="password"></label>
+          <svg id="icon-lock-op" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" width="32" height="32" fill="none" stroke="currentcolor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2">
+            <path d="M5 15 L5 30 27 30 27 15 Z M9 15 C9 9 9 5 16 5 23 5 23 9 23 15 M16 20 L16 23" />
+            <circle cx="16" cy="24" r="1" />
+          </svg>
+          <input id="" class="form-control input-field-op" placeholder="Old Password" type="password" name="passwords[old]">
+          <br>
+          <svg id="icon-lock-np" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" width="32" height="32" fill="none" stroke="currentcolor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2">
+            <path d="M5 15 L5 30 27 30 27 15 Z M9 15 C9 9 9 5 16 5 23 5 23 9 23 15 M16 20 L16 23" />
+            <circle cx="16" cy="24" r="1" />
+          </svg>
+          <input id="" class="form-control input-field-np" placeholder="New Password" type="password" name="passwords[new]">
         </div>
+        <br>
+        <button id="btn-change-password" class="btn btn-dark">Change Password</button>
+      </form>
+    </div>
 
     <!-- ********** SIGN OUT FORM ********** -->
     <div class="signOut">
